# econ_sim

./: .gitignore  Cargo.toml  DesignDoc.md  README.md
assets/: first_names.all.txt  last_names.all.txt
sim_config/: sample.cfg  sim.cfg
src/: main.rs  sim.rs
src/sim/: consumer.rs  market.rs  producer.rs  production.rs  trader.rs
src/sim/market/: good.rs
src/sim/market/good/: bid.rs
