[package]
name = "econ_sim"
version = "0.1.0"
authors = ["tlk0128 <taylorking5@my.unt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.6.4"
rand = "0.8.2"
serde = "1.0.120"
serde_json = "1.0.64"
num-format = "0.4.0"
plotters = "0.3"